--- a/pkg/curatedpackages/config/awssecret.yaml
+++ b/pkg/curatedpackages/config/awssecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 stringData:
-  ID: {{.eksaAccessKeyId}}
-  SECRET: {{.eksaSecretAccessKey}}
+  ID: "{{.eksaAccessKeyId}}"
+  SECRET: "{{.eksaSecretAccessKey}}"
   REGION: {{.eksaRegion}}
 kind: Secret
 metadata:
