Update usage of control plane node role

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -40,5 +40,7 @@ spec:
       terminationGracePeriodSeconds: 10
       tolerations:
         - effect: NoSchedule
+          key: node-role.kubernetes.io/master
+        - effect: NoSchedule
           key: node-role.kubernetes.io/control-plane
       serviceAccountName: manager
