--- a/pkg/providers/vsphere/config/template-cp.yaml
+++ b/pkg/providers/vsphere/config/template-cp.yaml
@@ -1006,6 +1006,9 @@ data:
           serviceAccountName: vsphere-csi-controller
           tolerations:
           - effect: NoSchedule
+            key: node-role.kubernetes.io/master
+            operator: Exists
+          - effect: NoSchedule
             key: node-role.kubernetes.io/control-plane
             operator: Exists
 {{- if .controlPlaneTaints }}
@@ -1268,6 +1271,8 @@ data:
           - effect: NoSchedule
             key: node.cloudprovider.kubernetes.io/uninitialized
             value: "true"
+          - effect: NoSchedule
+            key: node-role.kubernetes.io/master
           - effect: NoSchedule
             key: node-role.kubernetes.io/control-plane
           - effect: NoSchedule
