--- a/pkg/awsiamauth/testdata/UpgradeAWSIAMAuth-manifest.yaml
+++ b/pkg/awsiamauth/testdata/UpgradeAWSIAMAuth-manifest.yaml
@@ -92,12 +92,14 @@ spec:
       # run on the host network (don't depend on CNI)
       hostNetwork: true
 
-      # run on each master node
+      # run on each control plane node
       nodeSelector:
         node-role.kubernetes.io/master: ""
       tolerations:
       - effect: NoSchedule 
         key: node-role.kubernetes.io/master
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
       - key: CriticalAddonsOnly
         operator: Exists
 
