--- a/pkg/providers/vsphere/testdata/expected_results_minimal_disable_csi_cp.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_minimal_disable_csi_cp.yaml
@@ -616,6 +616,8 @@ data:
           - effect: NoSchedule
             key: node-role.kubernetes.io/master
           - effect: NoSchedule
+            key: node-role.kubernetes.io/control-plane
+          - effect: NoSchedule
             key: node.kubernetes.io/not-ready
           volumes:
           - configMap:
