--- a/pkg/providers/vsphere/testdata/cluster_main_121_md_upgrade_strategy.yaml
+++ b/pkg/providers/vsphere/testdata/cluster_main_121_md_upgrade_strategy.yaml
@@ -47,6 +47,7 @@ metadata:
   namespace: test-namespace
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 8192
@@ -67,6 +68,7 @@ metadata:
   namespace: test-namespace
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 4096
@@ -87,6 +89,7 @@ metadata:
   namespace: test-namespace
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 4096
