--- a/pkg/providers/vsphere/testdata/cluster_minimal_autoscaling.yaml
+++ b/pkg/providers/vsphere/testdata/cluster_minimal_autoscaling.yaml
@@ -40,6 +40,7 @@ metadata:
   namespace: test-namespace
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 8192
