--- a/pkg/providers/vsphere/testdata/cluster_mirror_config.yaml
+++ b/pkg/providers/vsphere/testdata/cluster_mirror_config.yaml
@@ -46,6 +46,7 @@ metadata:
   name: test-cp
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 8192
@@ -65,6 +66,7 @@ metadata:
   name: test-wn
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 4096
@@ -84,6 +86,7 @@ metadata:
   name: test-etcd
 spec:
   diskGiB: 25
+  cloneMode: linkedClone
   datastore: "/SDDC-Datacenter/datastore/WorkloadDatastore"
   folder: "/SDDC-Datacenter/vm"
   memoryMiB: 4096
