Propagate OIDC Config for Nutanix
Ensure OIDC config is propogated to KubeAdmControlPlane via
API Server extra args for the Nutanix provider.

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -65,6 +65,10 @@ spec:
           - localhost
           - 127.0.0.1
           - 0.0.0.0
+{{- if .apiServerExtraArgs }}
+        extraArgs:
+{{ .apiServerExtraArgs.ToYaml | indent 10 }}
+{{- end }}
       controllerManager:
         extraArgs:
           enable-hostpath-provisioner: "true"
