--- a/pkg/providers/nutanix/testdata/expected_results_autoscaling_md.yaml
+++ b/pkg/providers/nutanix/testdata/expected_results_autoscaling_md.yaml
@@ -62,6 +62,8 @@ metadata:
 spec:
   template:
     spec:
+      preKubeadmCommands:
+        - hostnamectl set-hostname "{{ ds.meta_data.hostname }}"
       joinConfiguration:
         nodeRegistration:
           kubeletExtraArgs:
